--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
+    <script src="./script/script.js" defer></script>
     <title>Enzo Medeiros</title>
 </head>
 
@@ -21,10 +22,11 @@
             </div> <!-- logo -->
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Especialidades</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#especialidades">Especialidades</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#projetos">Projetos</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
             <div class="btn-contato">
@@ -32,12 +34,31 @@
                     <button>Contato</button>
                 </a>
             </div>
+            <div id="btn-abrir-menu" class="btn-abrir-menu">
+                <i class="fa-regular fa-square-caret-down"></i>
+            </div>
+            <div id="menu-mobile" class="menu-mobile">
+
+                <div class="btn-fechar"><i class="fa-solid fa-xmark"></i></div>
+                <nav>
+                    <ul>
+                        <li><a href="#inicio">Inicio</a></li>
+                        <li><a href="#especialidades">Especialidades</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="#projetos">Projetos</a></li>
+                        <li><a href="#">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div id="overlay-menu" class="overlay-menu">
+
+            </div>
 
         </div> <!-- Interface -->
     </header>
 
     <main>
-        <section class="topo-do-site">
+        <section id="inicio" class="topo-do-site">
             <div class="interface">
                 <div class="flex">
                     <div class="txt-topo-site">
@@ -58,7 +79,7 @@
                 </div>
             </div>
         </section>
-        <section class="especialidades">
+        <section id="especialidades" class="especialidades">
             <div class="interface">
                 <h2 class="titulo">MINHAS<span> HABILIDADES.</span></h2>
                 <div class="flex">
@@ -84,7 +105,7 @@
                 </div>
             </div>
         </section>
-        <section class="sobre">
+        <section id="sobre" class="sobre">
             <div class="interface">
                 <div class="flex">
                     <div class="img-sobre">
@@ -112,7 +133,7 @@
                 </div>
             </div>
         </section>
-        <section class="portfolio">
+        <section id="projetos" class="portfolio">
             <div class="interface">
                 <h2 class="titulo">MEU<span> PORTFÓLIO.</span></h2>
                 <div class="flex">
@@ -131,11 +152,11 @@
         <section class="formulario">
             <div class="interface">
                 <h2 class="titulo">FALA<span> COMIGO.</span></h2>
-                <form action="">
-                    <input type="text" name="" id="" placeholder="Seu nome completo é ?" required>
-                    <input type="email" name="" id="" placeholder="Qual o seu melhor e-mail ? " required>
-                    <input type="number" name="" id="" placeholder="Seu Whatsapp ?">
-                    <textarea name="" id="" placeholder="Do que você precisa ?" required></textarea>
+                <form method="post"action="./php(form)/form.php">
+                    <input type="text" name="nome" id="nome" placeholder="Seu nome completo é ?" required>
+                    <input type="email" name="email" id="email" placeholder="Qual o seu melhor e-mail ? " required>
+                    <input type="number" name="telefone" id="telefone" placeholder="Seu Whatsapp ?">
+                    <textarea name="mensagem" id="mensagem" placeholder="Do que você precisa ?" required></textarea>
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
                 </form>
 
@@ -147,7 +168,7 @@
             <div class="line-footer">
                 <div class="flex">
                     <div class="logo-footer">
-                        <img  id="rodape-img" src="./img/logo.svg" alt="logo">
+                        <img id="rodape-img" src="./img/logo.svg" alt="logo">
                     </div>
                     <div class="btn-social">
                         <a href="https://www.instagram.com/enzo.bmedeiros/" target="_blank"><button><i
