--- a/index.html
+++ b/index.html
@@ -152,14 +152,18 @@
         <section class="formulario">
             <div class="interface">
                 <h2 class="titulo">FALA<span> COMIGO.</span></h2>
-                <form method="post"action="./php(form)/form.php">
+                <form action="https://formsubmit.co/enzobenedito95@gmail.com" method="POST">
+                    <input type="hidden" name="_next" value="https://beneditocode.github.io/Portfolio-Enzo-Dev/obrigado.html">
+                    <input type="hidden" name="_subject" value="Novo Contato via Portfólio!">
+                    <input type="hidden" name="_captcha" value="false">
+        
                     <input type="text" name="nome" id="nome" placeholder="Seu nome completo é ?" required>
-                    <input type="email" name="email" id="email" placeholder="Qual o seu melhor e-mail ? " required>
+                    <input type="email" name="email" id="email" placeholder="Qual o seu melhor e-mail ?" required>
                     <input type="number" name="telefone" id="telefone" placeholder="Seu Whatsapp ?">
                     <textarea name="mensagem" id="mensagem" placeholder="Do que você precisa ?" required></textarea>
+        
                     <div class="btn-enviar"><input type="submit" value="ENVIAR"></div>
                 </form>
-
             </div>
         </section>
     </main>
