--- a/obrigado.html
+++ b/obrigado.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <title>Obrigado!</title>
     <link rel="stylesheet" href="./styles/obrigado.css">
 </head>
+
 <body>
-    <h1>Obrigado pelo seu contato!</h1>
-    <p>Em breve entrarei em contato com você. 🚀</p>
+    <div class="flex">
+        <h1>Obrigado pelo seu contato!</h1>
+        <p>Em breve entrarei em contato com você. 🚀</p>
+        <a href="index.html"><button>Voltar ao inicio</button></a>
+    </div>
 </body>
+
 </html>
