--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./script/script.js" defer></script>
-    <title>Enzo Medeiros</title>
+    <title><img src="./img/logo.svg" alt=".">Enzo Medeiros</title>
 </head>
 
 <body>
