--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./script/script.js" defer></script>
-    <title><img src="./img/logo.svg" alt=".">Enzo Medeiros</title>
+    <img src="./img/logo.svg" alt=".">
+    <title >Enzo Medeiros</title>
 </head>
 
 <body>
