--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/style.css">
     <script src="./script/script.js" defer></script>
-    <img src="./img/logo.svg" alt=".">
+    <link rel="shortcut icon" href="./img/icon.svg" type="image">
     <title>Enzo Medeiros</title>
 </head>
 
