--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     <li><a href="#especialidades">Especialidades</a></li>
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#projetos">Projetos</a></li>
-                    <li><a href="#">Contato</a></li>
+                    <li><a href="#formulario1">Contato</a></li>
                 </ul>
             </nav>
             <div class="btn-contato">
-                <a href="#">
+                <a href="https://api.whatsapp.com/send?phone=5586999857004&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20voc%C3%AA.">
                     <button>Contato</button>
                 </a>
             </div>
@@ -47,7 +47,7 @@
                         <li><a href="#especialidades">Especialidades</a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#projetos">Projetos</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#formulario1">Contato</a></li>
                     </ul>
                 </nav>
             </div>
@@ -150,7 +150,7 @@
                 </div>
             </div>
         </section>
-        <section class="formulario">
+        <section id="formulario1" class="formulario">
             <div class="interface">
                 <h2 class="titulo">FALA<span> COMIGO.</span></h2>
                 <form action="https://formsubmit.co/enzobenedito95@gmail.com" method="POST">
