--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </ul>
             </nav>
             <div class="btn-contato">
-                <a href="https://api.whatsapp.com/send?phone=5586999857004&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20voc%C3%AA.">
+                <a href="https://api.whatsapp.com/send?phone=5586999857004&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20voc%C3%AA." target="_blank">
                     <button>Contato</button>
                 </a>
             </div>
@@ -68,7 +68,7 @@
                             busca qualidade, criatividade e resultados, está no lugar certo.
                             Vamos transformar suas ideias em realidade!</p>
                         <div class="btn-contato">
-                            <a href="#">
+                            <a href="https://api.whatsapp.com/send?phone=5586999857004&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20com%20voc%C3%AA." target="_blank">
                                 <button>Entre em Contato</button>
                             </a>
                         </div>
