--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         <div class="overlay"> Biblion </div>
                     </div>
                     <div class="img-port" style="background-image: url(./img/2.png);">
-                        <div class="overlay">Réplica Imobliária Cury</div>
+                        <div class="overlay">Plataforma DevIniciante</div>
                     </div>
                     <div class="img-port" style="background-image: url(./img/3.png);">
                         <div class="overlay">Plataforma EducaVirtus</div>
