--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="flex">
                     <div class="especialidades-box">
                         <i class="fa-solid fa-code"></i>
-                        <h3>Dev Front-end</h3>
-                        <p>Criação de sites modernos, responsivos e interativos usando HTML, CSS e JavaScript.</p>
+                        <h3>Dev Full-Stack</h3>
+                        <p>Criação de sistemas completos, utilizando html, css, javascript, python e Django</p>
 
                     </div>
                     <div class="especialidades-box">
@@ -142,10 +142,10 @@
                         <div class="overlay"> Biblion </div>
                     </div>
                     <div class="img-port" style="background-image: url(./img/2.png);">
-                        <div class="overlay">Plataforma DevIniciante</div>
+                        <div class="overlay"><a href="">Plataforma DevIniciante</a></div>
                     </div>
                     <div class="img-port" style="background-image: url(./img/3.png);">
-                        <div class="overlay">Plataforma EducaVirtus</div>
+                        <div class="overlay"><a href="https://www.figma.com/proto/XX5vZVYCth0tezNZ9tq7Si/AVENTURISMO?node-id=0-1&t=ahF69UMiQzqU2NAj-1">Plataforma AvenTurismo</a></div>
                     </div>
                 </div>
             </div>
